# hfuse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  flake.nix  install.sh  result
include/: debug_funcs.h  file_handler.h  hfs_helpers.h  hfuse.h  hfuse_context.h  options.h
src/: debug_funcs.c  file_handler.c  hello.c  hfs_helpers.c  hfuse.c  hfuse_context.c  main.c
test/: CMakeLists.txt
test/src/: escape_chars.c  hfs_helpers.c  test2.c  test3.c  trim_vdir.c
